--- a/RecordSolutions/Content/less/styles.less
+++ b/RecordSolutions/Content/less/styles.less
@@ -2,11 +2,8 @@
 // Includes
 // --------
 @import "bootstrap.less";
-@font-face
-{
-    font-family: "Open Sans Light";
-    src: url('http://fonts.googleapis.com/css?family=Open+Sans:300');
-}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+
 // ---------
 // Variables
 // ---------
@@ -25,7 +22,7 @@ BODY {
   padding-bottom: 75px;
 }
 BODY, H1, H2, H3, H4, H5, H6 {
-  font-family: "Open Sans Light";
+  font-family: "Open Sans";
 }
 INPUT[type="text"],
 INPUT[type="email"],
@@ -199,7 +196,7 @@ div.headerLogo {
       width: 767px;
       margin: 0px auto;
       padding-right: 313px;
-      font: 33px "Open Sans Light";
+      font: 33px "Open Sans";
       text-align: center;
     }
   }
