fixed display errors

--- a/RecordSolutions/Content/less/stylesMgmt.less
+++ b/RecordSolutions/Content/less/stylesMgmt.less
@@ -150,10 +150,13 @@ legend {
     }
     #tripheader {
       .col-sm-3 {
-        h2 {
+        .tripcontainer {
           font-size: 27px;
           font-weight: 900;
+          line-height: 21px;
           text-align: center;
+          margin-top: 20px;
+          margin-bottom: 10px;
           .icon{
             width: 55px;
             height: 55px;
@@ -253,7 +256,7 @@ legend {
     }
     #tripheader {
       .col-sm-3 {
-        h2 {
+        .tripcontainer {
           padding: 25px;
           border: solid 1px #ccc;
           border-radius: 7px;
@@ -264,6 +267,9 @@ legend {
           }
           small {
             font-size: 42%;
+            font-weight: 400;
+            line-height: 1;
+            color: #999;
           }
         }
       }
