--- a/RecordSolutions/Content/less/styles.less
+++ b/RecordSolutions/Content/less/styles.less
@@ -3,6 +3,7 @@
 // --------
 @import "bootstrap.less";
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
+@import url(http://fonts.googleapis.com/css?family=Stint+Ultra+Condensed);
 
 // ---------
 // Variables
